--- a/ChatUI/index.html
+++ b/ChatUI/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Chath</title>
+    <title>Chat</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-theame2.min.css">
     <link rel="stylesheet" href="css/styles.css">
